--- a/book/Effective Java/2. 对于所有对象都通用的方法.md
+++ b/book/Effective Java/2. 对于所有对象都通用的方法.md
@@ -37,3 +37,18 @@ public boolean equals(Object o) {
     return false;
 }
 ```
+### 9. 覆盖 equals 时总要覆盖 hashCode
+Object 规范
+* 只要对象的 equals 方法的比较操作所用到的信息没有被修改，那么对同一个对象调用多次，hashCode 方法都必须始终如一地返回同一个整数
+* 如果两个对象根据 equals(Object) 方法比较是相等的，那么 hashCode 也必须相等
+* 如果两个对象根据 equals(Object) 方法比较不想等，hashCode 不一定产生不同的整数结果
+
+### 10. 始终要覆盖 toString
+
+### 11. 谨慎地覆盖 clone
+永远不要让客户去做任何类库能够替客户完成的事情  
+实际上，clone 的方法就是另一个构造器：必须确保它不会伤害到原始的对象，并确保正确地创建被克隆对象中的约束条件  
+除非必要，不要覆盖 clone 方法，也不要去调用它
+
+### 12. 考虑实现 Comparable 接口
+强烈建议 (x.compareTo(y) == 0) == (x.equals(y))
