num 16~20 of effective java

--- a/book/Effective Java/3. 类和接口.md
+++ b/book/Effective Java/3. 类和接口.md
@@ -13,3 +13,26 @@
 4. 使所有的域都成为私有的
 5. 确保对于任何可变组件的互斥访问（客户端无法获取指向可变对象的域）
 例如：String、基本类型的包装类、BigInteger 和 BigDecimal
+
+### 16. 复合优于继承
+继承的缺点
+1. 继承打破了封装性
+2. 子类是脆弱的
+
+### 17. 要么为继承而设计，并提供文档说明，要么就禁止继承
+如果使用继承，父类可覆盖的方法必须提供文档说明自用性
+
+### 18. 接口优于抽象类
+接口通常是定义允许多个实现的类型的最佳途径。  
+当演变的容易性比灵活性和功能更为重要的时候，应该使用抽象类来定义类型。
+
+### 19. 接口只用于定义类型
+接口应该只被用来定义类型，不应该被用来导出常量。  
+常量的定义：
+* 相关的类
+* 枚举类型
+* 不可实例化的工具类
+
+### 20. 类层次优于标签类
+1. 为原始标签类定义一个包含抽象方法的抽象类
+2. 定义根类的具体子类
