add valid parentheses

--- a/book/Effective Java/4. 泛型.md
+++ b/book/Effective Java/4. 泛型.md
@@ -4,3 +4,9 @@
 ### 24. 消除非受检警告
 尽可能地消除每一个非受检警告。  
 如果无法消除警告，同时可以证明引起警告的代码是类型安全的，可以用一个 @SupppressWarnings("unchecked") 注解来禁止这条警告
+
+### 25. 列表优先于数组
+数组和泛型有着非常不同的类型规则。数组是协变且可以具体化的；泛型是不可变的且可以被擦除的。数组提供了运行时的类型安全，但是没有编译时的类型安全，反之，对于泛型也一样。
+
+### 26. 优先考虑泛型
+使用泛型比使用需要在客户端代码中进行转换的类型来得更加安全，也更加容易。
