add Palindromic string

--- a/study/程序员基本素养.md
+++ b/study/程序员基本素养.md
@@ -3,7 +3,7 @@
 * Effective Java [35%]
 * Java 并发编程实战
 * Java 性能权威指南
-* 深入理解 Java 虚拟机
+* 深入理解 Java 虚拟机 [10%]
 * Java 编程思想
 * 精通 Spring 4.x
 * Spring 技术内幕
