--- a/interview/简历.md
+++ b/interview/简历.md
@@ -28,7 +28,7 @@
 
 ### 文件系统
 
-**项目描述：** 亲宝宝文件系统，提供包括文件上传、文件管理&处理、文件分发服务能力的系统。每天有超过 1500 万的文件上传量，处理超过 60G 的文件。
+**项目描述：** 亲宝宝文件系统，提供包括文件上传、文件管理、文件处理、文件分发服务能力的系统。每天有超过 1500 万的文件上传量，处理超过 60G 的文件。
 
 **涉及技术：** Spring、SpringMVC、Spring Boot、MyBatis、Redis、Dubbo、RocketMQ
 
@@ -42,7 +42,7 @@
 
 ### 创作工具
 
-项目描述：
+项目描述：亲宝宝创作工具，通过大数据用户行为分析圈选出符合条件的用户，在节日节点/用户宝宝生日节点，为用户制作指定场景的MV，并推送到用户侧。千万的用户曝光率，为运营拉新促活赋能。
 
 **涉及技术：**Spring、SpringMVC、Spring Boot、Dubbo、MyBatis、Kafka、RocketMQ
 
@@ -57,7 +57,7 @@
 
 ## 自我评价
 
-* 良好的学习能力，自学上手音视频技术，并且能够开发简单的音视频功能
+* 良好的学习能力，自学上手音视频技术，达到视频&图片转码服务的维护的能力
 * 不会把自己限制在某一个语言上，不同的语言适合不同的场景
 * 习惯归纳总结，快速定位问题
 * 尽量把手动重复的工作自动化，提高工作效率
