--- a/study/程序员基本素养.md
+++ b/study/程序员基本素养.md
@@ -8,6 +8,7 @@
 * 精通 Spring 4.x
 * Spring 技术内幕
 * Head First 设计模式
+* MySQL 技术内幕（InnoDB 存储引擎）[26%]
 #### C
 #### GO
 * [go example](https://gobyexample.com/)
