--- a/interview/简历.md
+++ b/interview/简历.md
@@ -14,10 +14,11 @@
 
 ## 技能清单
 
-* 熟悉 Java 语法，多线程、集合等基础框架
+* 熟悉 Java 语法，理解io、多线程、集合等基础框架
 * 对 JVM 原理有初步的理解，包括内存模型、垃圾回收机制
 * 熟练掌握 SpringMVC、Spring Boot、MyBatis 等主流开源框架
-* 熟悉微服务架构，了解分布式、缓存、消息等常见开源框架
+* 熟悉分布式系统，熟悉 dubbo 服务化框架
+* 熟悉缓存、消息队列相关记录，redis、rocketMQ、kafka
 * 熟练掌握关系性数据库 MySQL，有过 SQL 语句调优经验
 
 ---
@@ -44,7 +45,7 @@
 
 项目描述：亲宝宝创作工具，通过大数据用户行为分析圈选出符合条件的用户，在节日节点/用户宝宝生日节点，为用户制作指定场景的MV，并推送到用户侧。千万的用户曝光率，为运营拉新促活赋能。
 
-**涉及技术：**Spring、SpringMVC、Spring Boot、Dubbo、MyBatis、Kafka、RocketMQ
+**涉及技术：** Spring、SpringMVC、Spring Boot、Dubbo、MyBatis、Kafka、RocketMQ
 
 **责任描述：**
 
@@ -57,7 +58,7 @@
 
 ## 自我评价
 
-* 良好的学习能力，自学上手音视频技术，达到视频&图片转码服务的维护的能力
+* 良好的学习能力，能够快速适应新环境
 * 不会把自己限制在某一个语言上，不同的语言适合不同的场景
 * 习惯归纳总结，快速定位问题
 * 尽量把手动重复的工作自动化，提高工作效率
