--- a/study/数据结构与算法/回溯算法.md
+++ b/study/数据结构与算法/回溯算法.md
@@ -1,4 +1,37 @@
-解决一个回溯问题，实际上就是一个决策树的遍历过程。
-1. 路径：已经做出的选择
-2. 选择列表：当前可以做的选择
-3. 结束条件：到达决策树底层，无法再做选择的条件
+BackTrack
+1. 回溯算法就是一种暴力穷举算法
+2. 穷举的过程就是遍历一棵多叉树的过程
+3. 回溯算法的代码框架和多叉树遍历的代码框架类似：
+```
+// 回溯算法框架
+List<Value> result;
+void backtrack(路径，选择列表) {
+    if (满足结束条件) {
+        result.add(路径);
+        return;
+    }
+
+    for (选择 ： 选择列表) {
+        做选择；
+        backtrack(路径，选择列表);
+        撤销选择；
+    }
+}
+```
+
+```
+// 多叉树遍历框架
+void traverse(TreeNode root) {
+    if (null == root) {
+        return;
+    }
+
+    for (TreeNode child : root.children) {
+        traverse(child);
+    }
+}
+```
+
+经典算法题
+[全排列](https://github.com/GeorgeCh2/review-self/blob/master/study/leetcode/BackTrack/Permutations.java)
+[N皇后](https://github.com/GeorgeCh2/review-self/blob/master/study/leetcode/BackTrack/NQueens.java)
